--- a/src/main/webapp/VAADIN/themes/tracker/serial-info.scss
+++ b/src/main/webapp/VAADIN/themes/tracker/serial-info.scss
@@ -13,5 +13,10 @@
       font-weight: bold;
       width: 3.5em;
     }
+
+    .si-label-text {
+      font-family: tahoma, verdana, arial;
+      font-size: 90%;
+    }
   }
 }
